# rs-graphql-template

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.apps.yaml  compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
entities/: Cargo.toml
entities/src/: access_code.rs  csrf_token.rs  lib.rs  oauth_provider.rs  token_blacklist.rs  uploaded_file.rs  user.rs
entities/src/enums/: cursor_enum.rs  mod.rs  oauth_provider_enum.rs  order_enum.rs  role_enum.rs
entities/src/helpers/: base64_cursor.rs  mod.rs  traits.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  m20230922_000001_create_user_table.rs  m20230922_000002_create_oauth_provider_table.rs  m20230922_000002_create_token_blacklist_table.rs  m20230923_000004_create_access_code_table.rs  m20230923_000005_create_csrf_token_table.rs  m20231014_000003_create_uploaded_file_table.rs  m20231112_000004_user_picture_foreign_key.rs  main.rs
src/: config.rs  lib.rs  main.rs
src/common/: auth_tokens.rs  error_handling.rs  formatters.rs  mod.rs  regexes.rs  validators.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  tests.rs
src/data_loaders/: file_loader.rs  mod.rs  user_loader.rs
src/dtos/: mod.rs
src/dtos/bodies/: change_password.rs  change_two_factor.rs  confirm_email.rs  confirm_sign_in.rs  email.rs  mod.rs  refresh_token.rs  reset_password.rs  sign_in.rs  sign_up.rs
src/dtos/enums/: mod.rs  ratio.rs
src/dtos/inputs/: mod.rs  update_name.rs
src/dtos/objects/: message.rs  mod.rs  total_count.rs  uploaded_file.rs  user.rs
src/dtos/queries/: mod.rs  oauth.rs
src/dtos/responses/: auth.rs  message.rs  mod.rs  oauth.rs  sign_in.rs  sign_up.rs
src/guards/: auth_guard.rs  mod.rs
src/helpers/: access_user.rs  get_access_user.rs  mod.rs
src/providers/: cache.rs  database.rs  environment.rs  jwt.rs  mailer.rs  mod.rs  oauth.rs  object_storage.rs  server_config.rs
src/providers/helpers/: access_token.rs  email_token.rs  mod.rs
src/resolvers/: health_resolver.rs  mod.rs  tests.rs  uploader_resolver.rs  users_resolver.rs
src/services/: auth_service.rs  mod.rs  uploader_service.rs  users_service.rs
src/services/helpers/: access_user.rs  mod.rs  password_hasher.rs
src/startup/: app.rs  mod.rs  schema_builder.rs  telemetry.rs
src/startup/helpers/: auth_tokens.rs  mod.rs
