[package]
name = "rust_graphql_template"
version = "0.1.0"
edition = "2021"
license = "MPL-2"

[lib]
name = "rust_graphql_template"

[workspace]
members = [".", "entities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "entities" }
actix-web = "4"
async-graphql-actix-web = "6"
async-graphql = "6"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
] }
argon2 = "0.5"
chrono = "0.4"
rusoto_s3 = "0.48"
rusoto_core = "0.48"
image = "0.24"
uuid = { version = "1.4", features = [
    "v4",
    "v5",
    "fast-rng",
    "macro-diagnostics",
] }
jsonwebtoken = "8.3"
lettre = { version = "0.10", features = ["builder", "tokio1-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
bcrypt = "0.15"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }
