[package]
name = "rust_graphql_template"
version = "0.1.0"
edition = "2021"
license = "MPL-2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [".", "entities", "migrations"]

[dependencies]
entities = { path = "entities" }
actix-web = "4"
async-graphql-actix-web = "7"
async-graphql = { version = "7", features = ["default", "dataloader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-actix-native-tls",
] }
argon2 = "0.5"
chrono = "0.4"
rusoto_s3 = "0.48"
rusoto_core = "0.48"
image = "0.24"
uuid = { version = "1.4", features = [
    "v4",
    "v5",
    "fast-rng",
    "macro-diagnostics",
] }
jsonwebtoken = "9.1.0"
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
bcrypt = "0.15"
oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }
derive_more = "0.99.17"
thiserror = "1.0.48"
tracing = "0.1"
tracing-opentelemetry = "0.22"
secrecy = "0.8"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
anyhow = "1"
redis = { version = "0.23", features = ["tokio-comp", "tokio-native-tls-comp"] }
base64 = "0.21"
regex = "1"
unicode-segmentation = "1"
slug = "0.1"
dotenvy = "0.15"

[dev-dependencies]
fake = "2.9.1"
actix-multipart = "0.6"
