[package]
name = "migrations"
version = "0.1.0"
edition = "2021"
license = "MPL-2"
authors = ["Afonso Barracha <barracha.afonso@gmail.com>"]
publish = false

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entities = { path = "../entities" }
sea-orm-migration = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
